[package]
name = "loda-lab"
version = "0.0.1"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
clap = "2.33.3"
num-integer = "0.1.44"
num-bigint = "0.4"
num-traits = "0.2"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
bloomfilter = "1.0.4"
rand = "0.8"
csv = "1.1"
toml = "0.5.8"
chrono = "0.4.19"
lru = "0.6.5"

[dev-dependencies]
tempfile = "3.2.0"
