[package]
name = "loda-lab"
version = "0.0.1"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.25"
console_error_panic_hook = "0.1.6"
regex = "1.4.3"
lazy_static = "1.4.0"
clap = "2.33.3"
num-integer = "0.1.44"
num-bigint = "0.4"
num-traits = "0.2"
env_logger = "0.9.0"
log = "0.4.14"
getrandom = { version = "0.2.2", features = ["js"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
bloomfilter = "1.0.4"
rand = "0.8"
csv = "1.1"
toml = "0.5.8"
chrono = { version = "0.4.19", features = ["wasmbind"] }
lru = "0.6.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Element'
]

[dev-dependencies]
tempfile = "3.2.0"
