[package]
name = "loda-rust-cli"
version = "0.1.0"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
description = "Command line interface for LODA Rust"
repository = "https://github.com/loda-lang/loda-rust"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "loda-rust"
path = "src/main.rs"

[dependencies]
loda-rust-core = { path = "../loda-rust-core" }
env_logger = "0.9.0"
log = "0.4.14"
clap = "2.33.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
bloomfilter = "1.0.4"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
csv = "1.1"
chrono = "0.4.19"
regex = "1.4.3"
lazy_static = "1.4.0"
walkdir = "2"
num_cpus = "1.13.0"
tokio = { version = "1.17.0", features = ["full"] }
prometheus-client = "0.15.1"
tide = "0.16"
http-types = "2"

[dev-dependencies]
tempfile = "3.2.0"
