[package]
name = "loda-rust-cli"
version = "2023.7.2"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
description = "Command line interface for LODA Rust"
repository = "https://github.com/loda-lang/loda-rust"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "loda-rust"
path = "src/main.rs"

[features]
linfa = ["dep:linfa", "dep:linfa-logistic", "dep:linfa-preprocessing", "dep:ndarray"]
petgraph = ["dep:petgraph"]

[dependencies]
loda-rust-core = { path = "../loda-rust-core" }
env_logger = "0.10.0"
log = "0.4.17"
clap = "3.2.5"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
bit-set = "0.5.2"
bloomfilter = "1.0.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
csv = "1.1.6"
chrono = "0.4.19"
regex = "1.5.6"
lazy_static = "1.4.0"
walkdir = "2.3.2"
num_cpus = "1.13.1"
tokio = { version = "1.19.2", features = ["full"] }
prometheus-client = "0.18.1"
tide = "0.16"
http-types = "2.12.0"
simple-pagerank = "0.2.0"
indicatif = "0.17.0"
console = "0.15.0"
toml = "0.7.4"
wait-timeout = "0.2.0"
anyhow = "1.0.58"
subprocess = "0.2.9"
bastion = { version = "0.4.5", features = ["tokio-runtime"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
unicode-width = "0.1.7"
html-escape = "0.2.13"
ndarray = { version = "0.15", optional = true }
linfa = { version = "0.6.1", optional = true }
linfa-logistic = { version = "*", optional = true }
linfa-preprocessing = { version = "*", optional = true }
petgraph = { version = "0.6.3", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
filetime = "0.2.18"
