[package]
name = "loda-rust-core"
version = "0.1.0"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
description = "Shared code between LODA Rust projects"
repository = "https://github.com/loda-lang/loda-rust"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4"
num-integer = "0.1.44"
num-traits = "0.2"
log = "0.4.14"
getrandom = { version = "0.2.2", features = ["js"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
bloomfilter = "1.0.4"
rand = "0.8"
csv = "1.1"
toml = "0.5.8"
chrono = { version = "0.4.19", features = ["wasmbind"] }
lru = "0.6.5"

[dev-dependencies]
tempfile = "3.2.0"
