[package]
name = "loda-rust-core"
version = "0.1.0"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
description = "Shared code between LODA Rust projects"
repository = "https://github.com/loda-lang/loda-rust"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
regex = "1.5.6"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
lru = "0.8.0"

[dev-dependencies]
tempfile = "3.3.0"
