[package]
name = "lodalab-cli"
version = "0.1.0"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
description = "Command line interface for LODA Rust"
repository = "https://github.com/loda-lang/loda-rust"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "loda-lab"
path = "src/main.rs"

[dependencies]
lodalab-core = { path = "../lodalab-core" }
env_logger = "0.9.0"
log = "0.4.14"
clap = "2.33.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
