[package]
name = "lodalab-web"
version = "0.1.0"
authors = ["Simon Strandgaard <neoneye@gmail.com>"]
description = "Interactive web interface, so a person new to LODA, can try it in their browser."
repository = "https://github.com/loda-lang/loda-rust"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lodalab-core = { path = "../lodalab-core" }
wasm-bindgen = "0.2"
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.25"
console_error_panic_hook = "0.1.6"
log = { version = "0.4.14", features = ["std"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Element'
]
